Archive2/40/32a29e3bca040b/output
+ clang++ -std=c++14 -O3 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter -stdlib=libc++ -pthread main.cpp -lsupc++
main.cpp:11:23: error: target exception specification is not superset of source
    function_type b = bar;
                      ^
1 error generated.
